--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -1,6 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+  <PropertyGroup Label="Compilation">
     <OutputType>Exe</OutputType>
     <LangVersion>latest</LangVersion>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -17,14 +16,14 @@
 
   <PropertyGroup Label="Package">
     <Authors>Paillat Laszlo</Authors>
-    <PackageId>DefaultApiDocumentation</PackageId>
-    <Description>DefaultEcs is an Entity Component System framework which aims to be accessible with little constraints while retaining as much performance as possible for game development.</Description>
-    <!--<PackageIconUrl>https://github.com/Doraku/DefaultEcs/raw/master/image/logo.png</PackageIconUrl>-->
-    <PackageProjectUrl>https://github.com/Doraku/DefaultApiDocumentation</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/Doraku/DefaultApiDocumentation/blob/master/LICENSE.md</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/Doraku/DefaultApiDocumentation.git</RepositoryUrl>
+    <PackageId>DefaultDocumentation</PackageId>
+    <Description></Description>
+    <PackageIconUrl>https://github.com/Doraku/DefaultDocumentation/raw/master/image/logo.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/Doraku/DefaultDocumentation/blob/master/LICENSE.md</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>api-documentation markdown</PackageTags>
+    <PackageTags>markdown documentation</PackageTags>
 
     <Version>0.1.0</Version>
     <PackageReleaseNotes>
