cleaned up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-﻿/source/*/obj
-/source/*/bin
-/source/.vs
-/source/*/*.vspscc
-/source/*/*.vssscc
-/source/*/*.user
+﻿/**/obj
+/**/bin
+/**/.vs
+/**/*.vspscc
+/**/*.user
 /package
