added code support fixed namespace

--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -31,6 +31,7 @@
     <Version>0.2.0</Version>
     <PackageReleaseNotes>
 added c support
+added code support
 added N support
     </PackageReleaseNotes>
   </PropertyGroup>
