added example support

--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -32,6 +32,7 @@
     <PackageReleaseNotes>
 added c support
 added code support
+added example support
 added N support
     </PackageReleaseNotes>
   </PropertyGroup>
