throw a better exception when missing documentation on generic types

--- a/source/DefaultDocumentation/Properties/launchSettings.json
+++ b/source/DefaultDocumentation/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DefaultDocumentation": {
       "commandName": "Project",
-      "commandLineArgs": "/xml:\"..\\..\\..\\..\\Dummy\\documentation\\Dummy.xml\""
+      "commandLineArgs": "/xml:\"D:\\Projects\\DefaultDocumentation\\source\\Dummy\\documentation\\Dummy.xml\" /markdown:\"D:\\Projects\\DefaultDocumentation\\source\\Dummy\\documentation\""
     }
   }
 }
