--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -20,7 +20,7 @@
     <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
     <PackageIconUrl>https://github.com/Doraku/DefaultDocumentation/raw/master/image/logo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
-    <PackageLicense>https://github.com/Doraku/DefaultDocumentation/blob/master/LICENSE.md</PackageLicense>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>markdown documentation</PackageTags>
