--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -28,9 +28,10 @@
     <IsTool>true</IsTool>
     <DevelopmentDependency>true</DevelopmentDependency>
 
-    <Version>0.4.2-alpha1</Version>
+    <Version>0.4.2</Version>
     <PackageReleaseNotes>
 throw a better exception when missing documentation on generic types
+handle line break correctly
     </PackageReleaseNotes>
   </PropertyGroup>
 
