--- a/source/DefaultDocumentation/Properties/launchSettings.json
+++ b/source/DefaultDocumentation/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DefaultDocumentation": {
       "commandName": "Project",
-      "commandLineArgs": "/xml:\"D:\\Projects\\DefaultDocumentation\\source\\Dummy\\documentation\\Dummy.xml\" /markdown:\"D:\\Projects\\DefaultDocumentation\\source\\Dummy\\documentation\""
+      "commandLineArgs": "/xml:\"D:\\Projects\\DefaultEcs\\source\\DefaultEcs\\bin\\Release\\netstandard2.0\\DefaultEcs.xml\" /markdown:\"D:\\Projects\\DefaultEcs\\documentation\\api\""
     }
   }
 }
