--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -1,41 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup Label="Compilation">
-    <OutputType>Exe</OutputType>
-    <LangVersion>latest</LangVersion>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Optimize>true</Optimize>
-    <Configurations>Debug;Release</Configurations>
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\..\ds.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
+  <Import Project="DefaultDocumentation.targets" />
 
   <PropertyGroup Label="Debug" Condition="'$(Configuration)'=='Debug'">
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
-
-  <PropertyGroup Label="Package">
-    <Authors>Paillat Laszlo</Authors>
-    <PackageId>DefaultDocumentation</PackageId>
-    <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
-    <PackageIconUrl>https://github.com/Doraku/DefaultDocumentation/raw/master/image/logo.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>markdown documentation</PackageTags>
-
-    <IsTool>true</IsTool>
-    <DevelopmentDependency>true</DevelopmentDependency>
-
-    <Version>0.4.2</Version>
-    <PackageReleaseNotes>
-now create empty documentation for missing parent types
-fixed crash when missing generic parameter documentation
-    </PackageReleaseNotes>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="build\DefaultDocumentation.targets" PackagePath="build" />
-  </ItemGroup>
 </Project>
