changed dotnet path to be linux friendly retrograded target to netcore1.0 added framework4.5 target

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -2,7 +2,10 @@
   <PropertyGroup Label="Compilation">
     <OutputType>Exe</OutputType>
     <LangVersion>latest</LangVersion>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworks>
+      net45;
+      netcoreapp1.0;
+    </TargetFrameworks>
     <Optimize>true</Optimize>
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
