--- a/source/DefaultDocumentation/DefaultDocumentation.Package.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Package.csproj
@@ -22,10 +22,13 @@
     <IsTool>true</IsTool>
     <DevelopmentDependency>true</DevelopmentDependency>
 
-    <Version>0.4.3-alpha1</Version>
+    <Version>0.4.3-alpha3</Version>
     <PackageReleaseNotes>
 fixed crash when missing parent types
 fixed crash when missing generic parameter documentation
+changed dotnet path to be linux friendly
+retrograded target to netcore1.0
+added framework4.5 target
     </PackageReleaseNotes>
   </PropertyGroup>
 
