--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -3,7 +3,7 @@
     <OutputType>Exe</OutputType>
     <LangVersion>latest</LangVersion>
     <TargetFrameworks>
-      net45;
+      net472;
       netcoreapp2.0;
     </TargetFrameworks>
     <Optimize>true</Optimize>
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup Label="Reference">
+    <PackageReference Include="ICSharpCode.Decompiler" Version="5.0.1.5145" />
     <PackageReference Include="Mono.Cecil" Version="0.11.0" />
   </ItemGroup>
 </Project>
