--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -12,9 +12,29 @@
   
   <ItemGroup>
     <None Remove="DefaultDocumentation.targets" />
+    <Content Include="..\..\image\logo.png" PackagePath="\" Visible="false"/>
+    <None Include="bin\Release\net472\*.dll" Pack="true" PackagePath="tools\" Visible="false" />
+    <Content Include="build\DefaultDocumentation.targets" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Label="Reference">
     <PackageReference Include="ICSharpCode.Decompiler" Version="5.0.1.5145" />
   </ItemGroup>
+  
+  <PropertyGroup Label="Package">
+    <Authors>Paillat Laszlo</Authors>
+    <AssemblyName>DefaultDocumentation</AssemblyName>
+    <AssemblyTitle>DefaultDocumentation</AssemblyTitle>
+    <PackageId>DefaultDocumentation</PackageId>
+    <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>markdown documentation</PackageTags>
+
+    <IsTool>true</IsTool>
+    <DevelopmentDependency>true</DevelopmentDependency>
+  </PropertyGroup>
 </Project>
