--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup Label="Package">
     <Version>0.5.0</Version>
     <PackageReleaseNotes>
-full rework to produce a much more complete documentation using the produced assembly
+added parameters default value in generated code example
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
