--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -10,6 +10,7 @@
     <Version>0.5.0</Version>
     <PackageReleaseNotes>
 added parameters default value in generated code example
+added inheritance and implementation type information
 
 fixed generic type and array link generation
 fixed dotnet api link for generic and parameterized members
