--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -11,6 +11,7 @@
     <PackageReleaseNotes>
 added parameters default value in generated code example
 added inheritance and implementation type information
+added namespace documentation through special named class NamespaceDoc
 
 fixed generic type and array link generation
 fixed dotnet api link for generic and parameterized members
