added assembly documentation for home page through special named type AssemblyDoc

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -10,6 +10,8 @@
     <Version>0.5.1</Version>
     <PackageReleaseNotes>
 fixed Property Returns title to Property Value
+
+added assembly documentation for home page through special named type AssemblyDoc
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
