fixed TypeDocItem writing members of nested types release 0.5.3

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -7,14 +7,9 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
-    <Version>0.5.2</Version>
+    <Version>0.5.3</Version>
     <PackageReleaseNotes>
-fixed Property Returns title to Property Value
-fixed enum field link
-fixed leading whitespace in summary throwing an exception
-
-added assembly documentation for home page through special named type AssemblyDoc
-added DefaultDocumentationHome element to change home file name
+fixed TypeDocItem writing members of nested types
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
