fixed nested type not showing parent type in name release 0.5.4

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
-    <Version>0.5.3</Version>
+    <Version>0.5.4</Version>
     <PackageReleaseNotes>
-fixed TypeDocItem writing members of nested types
+fixed nested type not showing parent type in name
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
