changed netcoreapp to v3.0

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -7,12 +7,10 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
-    <Version>0.5.5</Version>
+    <Version>0.6.0</Version>
     <PackageReleaseNotes>
-fixed TypeDocItem writing members of nested types
-fixed nested type not showing parent type in name
-fixed NullReferenceException for generic type
-fixed internal interfaces shown in implementation
+breaking change:
+changed netcoreapp to v3.0
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
