resolve #13 do not generate base homepage if there is only one namespace present and no DefaultDocumentationHome specified nor any AssemblyDoc

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -11,6 +11,7 @@
     <PackageReleaseNotes>
 breaking change:
 changed netcoreapp to v3.0
+do not generate base homepage if there is only one namespace present and no DefaultDocumentationHome specified nor any AssemblyDoc
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
