--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -10,6 +10,8 @@
     <Version>0.6.3</Version>
     <PackageReleaseNotes>
 added DefaultDocumentationNestedTypeVisibility parameter to set where nested types are displayed (possible value: Namespace, DeclaringType,Everywhere)
+
+fixed see element with langword attribute usage
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
