--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
-    <Version>0.6.10</Version>
+    <Version>0.6.11</Version>
     <PackageReleaseNotes>
-added Name FileNameMode (experimental, may generate name collission if multiple types have the same name in different namespaces)
+ignores readme.md files on deleting old markdowns
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
