--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -29,7 +29,7 @@
     <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
     <PackageIcon>logo.png</PackageIcon>
     <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>markdown documentation</PackageTags>
