fixed generic api link (fix #26)

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -9,6 +9,8 @@
   <PropertyGroup Label="Package">
     <Version>0.6.12</Version>
     <PackageReleaseNotes>
+fixed generic api link
+
 added csharp declaration to code tag
     </PackageReleaseNotes>
   </PropertyGroup>
