added DefaultDocumentationInvalidCharReplacement parameters (fix #24)

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -12,6 +12,7 @@
 fixed generic api link
 
 added csharp declaration to code tag
+added DefaultDocumentationInvalidCharReplacement parameters
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
