--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -13,6 +13,7 @@ fixed generic api link
 
 added csharp declaration to code tag
 added DefaultDocumentationInvalidCharReplacement parameters
+added constant field values
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
