updated readme and releasenotes for v0.6.13

--- a/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.Release.csproj
@@ -9,8 +9,9 @@
   <PropertyGroup Label="Package">
     <Version>0.6.13</Version>
     <PackageReleaseNotes>
-add support to exclude namespace/type/members by adding a <exclude/> element in xml documentation
+added support to exclude namespace/type/members by adding a <exclude/> element in xml documentation
 added type constraints on generic type parameters
+added DefaultDocumentationWikiLinks parameter to produce links compatible with github wiki pages
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
