--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -26,8 +26,8 @@ jobs:
 
     - name: Create package
       run: |
-        dotnet build source\DefaultDocumentation\DefaultDocumentation.Release.csproj -c Release
-        dotnet pack source\DefaultDocumentation\DefaultDocumentation.Release.csproj -c Release -o package /p:Version=${{ github.event.release.tag_name }}
+        dotnet build source\DefaultDocumentation\DefaultDocumentation.Release.csproj -c Release /p:Version=${{ github.event.release.tag_name }}
+        dotnet pack source\DefaultDocumentation\DefaultDocumentation.Release.csproj -c Release -o package --no-build
 
     - name: Create NEW_RELEASENOTES.txt
       run: |
