--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.301
+        dotnet-version: '5.0.100'
 
     - name: Compile
-      run: dotnet build source\DefaultDocumentation\DefaultDocumentation.csproj -c Release
+      run: dotnet build source\DefaultDocumentation\DefaultDocumentation.csproj -c Release /p:TEST=true
