--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -1,12 +1,66 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="DefaultDocumentation.targets" />
+  <PropertyGroup Label="Compilation">
+    <OutputType>Exe</OutputType>
+    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>
+      net472;
+      netcoreapp3.0;
+    </TargetFrameworks>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
 
   <PropertyGroup Label="Debug" Condition="'$(Configuration)'=='Debug'">
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DefaultDocumentation.targets" />
+    <None Include="bin\Release\net472\*.dll" Pack="true" PackagePath="tools\" Visible="false" />
+    <Content Include="..\..\image\logo.png" PackagePath="\" Visible="false"/>
+    <Content Include="build\DefaultDocumentation.targets" PackagePath="build\" />
+  </ItemGroup>
+
+  <ItemGroup Label="Reference">
+    <PackageReference Include="ICSharpCode.Decompiler" Version="6.2.1.6137" />
+  </ItemGroup>
+
   <PropertyGroup Label="Package">
-    <Version>0-ci$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
+    <Authors>Paillat Laszlo</Authors>
+    <AssemblyName>DefaultDocumentation</AssemblyName>
+    <AssemblyTitle>DefaultDocumentation</AssemblyTitle>
+    <PackageId>DefaultDocumentation</PackageId>
+    <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
+    <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>markdown documentation</PackageTags>
+
+    <IsTool>true</IsTool>
+    <DevelopmentDependency>true</DevelopmentDependency>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(LOCAL_VERSION)' == 'true'">
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\..\ds.snk</AssemblyOriginatorKeyFile>
+    <Version>0-local$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true' AND '$(TEST)' != 'true'">
+    <SignAssembly>True</SignAssembly>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <AssemblyOriginatorKeyFile>..\..\ds.snk</AssemblyOriginatorKeyFile>
+    <Version Condition="'$(CI_VERSION)' == 'true'">0-ci$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
+  </PropertyGroup>
+
+  <Target Name="PreparePackageReleaseNotesFromFile" BeforeTargets="GenerateNuspec">
+    <ReadLinesFromFile File="../../documentation/NEXT_RELEASENOTES.txt">
+      <Output TaskParameter="Lines" ItemName="ReleaseNotesLines" />
+    </ReadLinesFromFile>
+    <PropertyGroup>
+      <PackageReleaseNotes>@(ReleaseNotesLines, '%0a')</PackageReleaseNotes>
+    </PropertyGroup>
+  </Target>
 </Project>
