fixed release CI reverted to MIT license until nuget.org is fixed

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        ref: master
 
     - name: Set up dotnet
       uses: actions/setup-dotnet@v1
@@ -31,25 +33,25 @@ jobs:
 
     - name: Create NEW_RELEASENOTES.txt
       run: |
-        "echo ## DefaultUnDo ${{ github.event.release.tag_name }}> package\NEW_RELEASENOTES.txt"
-        "type documentation\NEXT_RELEASENOTES.txt >> package\NEW_RELEASENOTES.txt"
-        "echo.>> package\NEW_RELEASENOTES.txt"
-        "echo.>> package\NEW_RELEASENOTES.txt"
-        "echo [nuget package](https://www.nuget.org/packages/DefaultDocumentation/${{ github.event.release.tag_name }})>> package\NEW_RELEASENOTES.txt"
+        echo "## DefaultDocumentation ${{ github.event.release.tag_name }}" | Out-File package\NEW_RELEASENOTES.txt
+        type documentation\NEXT_RELEASENOTES.txt | Out-File package\NEW_RELEASENOTES.txt -Append
+        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
+        echo "[nuget package](https://www.nuget.org/packages/DefaultDocumentation/${{ github.event.release.tag_name }})" | Out-File package\NEW_RELEASENOTES.txt -Append
 
     - name: Update release
-      uses: tubone24/update_release@v1.0
+      uses: tubone24/update_release@v1.1.0
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        body_path: package\NEW_RELEASENOTES.txt
+        release_name: DefaultDocumentation ${{ github.event.release.tag_name }}
+        body_path: .\package\NEW_RELEASENOTES.txt
         
     - name: Update RELEASENOTES.md
       run: |
-        "echo.>> package\NEW_RELEASENOTES.txt"
-        "type documentation\RELEASENOTES.md >> package\NEW_RELEASENOTES.txt"
-        "type package\NEW_RELEASENOTES.txt > documentation\RELEASENOTES.md"
-        "echo.> documentation\NEXT_RELEASENOTES.txt"
+        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
+        type documentation\RELEASENOTES.md | Out-File package\NEW_RELEASENOTES.txt -Append
+        type package\NEW_RELEASENOTES.txt | Out-File documentation\RELEASENOTES.md -Append
+        echo "" | Out-File documentation\NEXT_RELEASENOTES.txt -NoNewLine
 
     - name: Publish package
       run: nuget push package\*.nupkg
