--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -33,7 +33,7 @@
     <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
     <PackageIcon>logo.png</PackageIcon>
     <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
-    <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>markdown documentation</PackageTags>
