--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -54,7 +54,7 @@ jobs:
         echo "" | Out-File documentation\NEXT_RELEASENOTES.txt -NoNewLine
 
     - name: Publish package
-      run: nuget push package\*.nupkg
+      run: dotnet nuget push package\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
 
     - name: Commit RELEASENOTES and documentation api
       run: |
