--- a/source/DefaultDocumentation/DefaultDocumentation.csproj
+++ b/source/DefaultDocumentation/DefaultDocumentation.csproj
@@ -1,65 +1,84 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup Label="Compilation">
-    <OutputType>Exe</OutputType>
-    <LangVersion>latest</LangVersion>
-    <TargetFrameworks>
-      net472;
-      netcoreapp3.1;
-    </TargetFrameworks>
-    <Optimize>true</Optimize>
-  </PropertyGroup>
+	<PropertyGroup Label="Compilation">
+		<OutputType>Exe</OutputType>
+		<LangVersion>latest</LangVersion>
+		<TargetFrameworks>
+			net5.0;
+			netcoreapp3.1;
+			netcoreapp3.0;
+			netcoreapp2.2;
+			netcoreapp2.1;
+			netcoreapp2.0;
+			net472;
+		</TargetFrameworks>
+		<Optimize>true</Optimize>
+	</PropertyGroup>
 
-  <PropertyGroup Label="Debug" Condition="'$(Configuration)'=='Debug'">
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Label="Debug" Condition="'$(Configuration)'=='Debug'">
+		<Optimize>false</Optimize>
+		<DefineConstants>DEBUG</DefineConstants>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="DefaultDocumentation.targets" />
-    <None Include="bin\Release\net472\*.dll" Pack="true" PackagePath="tools\" Visible="false" />
-    <Content Include="..\..\image\logo.png" PackagePath="\" Visible="false"/>
-    <Content Include="build\DefaultDocumentation.targets" PackagePath="build\" />
-  </ItemGroup>
+	<!--Include target framework output tool-->
+	<PropertyGroup>
+		<IsTool>false</IsTool>
+		<DevelopmentDependency>true</DevelopmentDependency>
+		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);ToolDependenciesTarget</TargetsForTfmSpecificBuildOutput>
+	</PropertyGroup>
+	<Target Name="ToolDependenciesTarget">
+		<Message Text="Including dependencies from $(OutputPath)" Importance="high" />
+		<ItemGroup>
+			<TfmSpecificPackageFile
+				Include="$(OutputPath)\**"
+				Exclude="$(OutputPath)\$(TargetName).exe;$(OutputPath)\$(TargetName).pdb">
+				<PackagePath>tools\$(TargetFramework)</PackagePath>
+			</TfmSpecificPackageFile>
+		</ItemGroup>
+	</Target>
 
-  <ItemGroup Label="Reference">
-    <PackageReference Include="ICSharpCode.Decompiler" Version="6.2.1.6137" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="..\..\image\logo.png" PackagePath="\" Visible="false" />
+		<Content Include="build\DefaultDocumentation.targets" PackagePath="build\" />
+		<None Remove="DefaultDocumentation.targets" />
+	</ItemGroup>
 
-  <PropertyGroup Label="Package">
-    <Authors>Paillat Laszlo</Authors>
-    <AssemblyName>DefaultDocumentation</AssemblyName>
-    <AssemblyTitle>DefaultDocumentation</AssemblyTitle>
-    <PackageId>DefaultDocumentation</PackageId>
-    <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
-    <PackageIcon>logo.png</PackageIcon>
-    <PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>markdown documentation</PackageTags>
+	<ItemGroup Label="Reference">
+		<PackageReference Include="ICSharpCode.Decompiler" Version="6.2.1.6137" />
+	</ItemGroup>
 
-    <IsTool>true</IsTool>
-    <DevelopmentDependency>true</DevelopmentDependency>
-  </PropertyGroup>
+	<PropertyGroup Label="Package">
+		<Authors>Paillat Laszlo</Authors>
+		<AssemblyName>DefaultDocumentation</AssemblyName>
+		<AssemblyTitle>DefaultDocumentation</AssemblyTitle>
+		<PackageId>DefaultDocumentation</PackageId>
+		<Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
+		<PackageIcon>logo.png</PackageIcon>
+		<PackageProjectUrl>https://github.com/Doraku/DefaultDocumentation</PackageProjectUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/Doraku/DefaultDocumentation.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>markdown documentation</PackageTags>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(LOCAL_VERSION)' == 'true'">
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\..\ds.snk</AssemblyOriginatorKeyFile>
-    <Version>0-local$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(LOCAL_VERSION)' == 'true'">
+		<SignAssembly>True</SignAssembly>
+		<AssemblyOriginatorKeyFile>..\..\..\ds.snk</AssemblyOriginatorKeyFile>
+		<Version>0-local$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true' AND '$(TEST)' != 'true'">
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\ds.snk</AssemblyOriginatorKeyFile>
-    <Version Condition="'$(CI_VERSION)' == 'true'">0-ci$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true' AND '$(TEST)' != 'true'">
+		<SignAssembly>True</SignAssembly>
+		<AssemblyOriginatorKeyFile>..\..\ds.snk</AssemblyOriginatorKeyFile>
+		<Version Condition="'$(CI_VERSION)' == 'true'">0-ci$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</Version>
+	</PropertyGroup>
 
-  <Target Name="PreparePackageReleaseNotesFromFile" BeforeTargets="GenerateNuspec">
-    <ReadLinesFromFile File="../../documentation/NEXT_RELEASENOTES.txt">
-      <Output TaskParameter="Lines" ItemName="ReleaseNotesLines" />
-    </ReadLinesFromFile>
-    <PropertyGroup>
-      <PackageReleaseNotes>@(ReleaseNotesLines, '%0a')</PackageReleaseNotes>
-    </PropertyGroup>
-  </Target>
+	<Target Name="PreparePackageReleaseNotesFromFile" BeforeTargets="GenerateNuspec">
+		<ReadLinesFromFile File="../../documentation/NEXT_RELEASENOTES.txt">
+			<Output TaskParameter="Lines" ItemName="ReleaseNotesLines" />
+		</ReadLinesFromFile>
+		<PropertyGroup>
+			<PackageReleaseNotes>@(ReleaseNotesLines, '%0a')</PackageReleaseNotes>
+		</PropertyGroup>
+	</Target>
+
 </Project>
